# ecsimd

./: CMakeLists.txt
benchs/: CMakeLists.txt  curve_group.cpp  ops.cpp  ops_cbn.cpp  p256_ref.cpp
benchs_ctbignum/include/ctbignum/: mod_exp.hpp
include/ecsimd/: add.h  bignum.h  cmp.h  curve.h  curve_group.h  curve_nist_p256.h  curve_point.h  curve_point_ops.h  gfp.h  ifelse.h  jacobian_curve_point.h  literals.h  mgry.h  mgry_csts.h  mgry_mul.h  mgry_ops.h  modular.h  mul.h  ops.h  serialization.h  shift.h  sub.h  swap.h  utility.h
lib/: CMakeLists.txt  scalar_mult_p256.cpp
src/: ecp256.cpp
tests/: CMakeLists.txt  curve_group.cpp  curve_point.cpp  mgry.cpp  ops.cpp  tests.h
work/: coz.py  coz_swap.py
